fix menu button's z-index overlap with breadcrumbs

--- a/assets/css/component/breadcrumb.css
+++ b/assets/css/component/breadcrumb.css
@@ -12,6 +12,7 @@ main > header > menu {
 #back,
 menu button,
 menu a {
+    z-index: 1;
     border: unset;
     background: unset;
     padding: 1ex;
